cluster/prod/nzbget/nzbget/nzbget-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nzbget-ingress
  namespace: nzbget
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: readarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: readarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: lazylibrarian
      podSelector:
        matchLabels:
          app: lazylibrarian
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: hydra
      podSelector:
        matchLabels:
          app: hydra
    ports:
    - port: 6789
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nzbget-egress
  namespace: nzbget
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-work
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 501
      protocol: TCP
    - port: 563
      protocol: TCP
    - port: 443
      protocol: TCP
